--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Set up Node.js
         uses: actions/setup-node@master
-        with: node-version: 14.16.1
+        with: node-version: 14.x
 
       - name: Install dependencies
         run: yarn install
@@ -42,12 +42,12 @@ jobs:
         with: github_token:${{secrets.GITHUB_TOKEN}}
           publish_dir:./dist
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # # Runs a single command using the runners shell
+      # - name: Run a one-line script
+      #   run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # # Runs a set of commands using the runners shell
+      # - name: Run a multi-line script
+      #   run: |
+      #     echo Add other actions to build,
+      #     echo test, and deploy your project.
